--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@react-navigation/native": "^6.1.9",
     "@reduxjs/toolkit": "^2.0.1",
     "expo": "~50.0.2",
+    "expo-av": "^13.10.3",
     "expo-status-bar": "~1.11.1",
     "react": "18.2.0",
     "react-native": "0.73.2",
