--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "@react-navigation/bottom-tabs": "^6.5.11",
     "@react-navigation/drawer": "^6.6.6",
     "@react-navigation/native": "^6.1.9",
+    "@react-navigation/stack": "^6.3.23",
     "@reduxjs/toolkit": "^2.0.1",
+    "axios": "^1.6.7",
     "expo": "~50.0.2",
     "expo-av": "^13.10.3",
     "expo-status-bar": "~1.11.1",
