--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "@react-navigation/native": "^6.1.9",
     "@react-navigation/stack": "^6.3.23",
     "@reduxjs/toolkit": "^2.0.1",
+    "@stripe/stripe-react-native": "^0.37.0",
+    "@types/react": "~18.2.45",
     "axios": "^1.6.7",
     "expo": "~50.0.2",
     "expo-av": "^13.10.3",
@@ -27,7 +29,8 @@
     "react-native-screens": "^3.29.0",
     "react-redux": "^9.1.0",
     "redux": "^5.0.1",
-    "styled-components": "^6.1.8"
+    "styled-components": "^6.1.8",
+    "typescript": "^5.3.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
