--- a/app.json
+++ b/app.json
@@ -1,7 +1,8 @@
 {
   "expo": {
-    "name": "0llie",
-    "slug": "0llie",
+    "name": "tlnt",
+    "slug": "tlnt",
+    "scheme": "tlnt",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
